Use https on OMDB. More minor tweaks.

--- a/Documentation/Changelog
+++ b/Documentation/Changelog
@@ -9,10 +9,10 @@ CHANGELOG
 
     - Color support is now opt-in. Use one of '--colorama' or '--ansi-colors'.
 
-      Some windows terminals (e.g. MinTTY) work with '--ansi-colors', but
+      Some windows terminals (e.g. mintty) work with '--ansi-colors', but
       break with '--colorama'. Likewise, cmd.exe or Console2 work with '--colorama'.
 
-    - OMDB search is now opt-in.
+    - OMDB search is now opt-in and uses https instead of http.
 
 * 2015/08/24:
 
